--- a/css/styles.css
+++ b/css/styles.css
@@ -133,3 +133,7 @@ color: #404bbf;
 .section-portfolio {
         background: #f4f4fd;
     }
+
+.section-list-item-portfolio {
+        background-color: #FFFFFF
+    }
